# edgar_reader

EDGARReader/: AppPropertiesView.qml  CMakeLists.txt  CoreView.qml  applicationpropertiesviewmodel.cpp  applicationpropertiesviewmodel.h  coreviewmodel.cpp  coreviewmodel.h  downloadslistmodel.cpp  downloadslistmodel.h  downloadviewmodel.cpp  downloadviewmodel.h  main.cpp
